<resources>
    <string name="app_name">Space Trader</string>
    <string name="choose_ss">Choose a Solar System</string>
    <string name="welcome_to_space_trader">Welcome to Space Trader!</string>
    <string name="accept">Accept</string>

    <!--login-->
    <string name="continueButton">Continue</string>
    <string name="loadButton">Load Game</string>
    <string name="newButton">New Game</string>
    <string name="settings">Settings</string>

    <!--main/game create-->
    <string name="player_name">Player Name</string>
    <string name="max_pts">Player Skill Attributes (16 points)</string>
    <string name="diff_level">Difficulty Level:</string>

    <string name="mainTitle">Enter Player Information</string>
    <string name="pilotHint">Pilot Skill Points</string>
    <string name="fighterHint">Fighter Skill Points</string>
    <string name="traderHint">Trader Skill Points</string>
    <string name="engineerHint">Engineer Skill Points</string>

    <!--main/game create-->
    <string name="story0">Welcome Space Trader!</string>
    <string name="story1">Get ready to embark in a wild adventure that will span the vast infinity of space.\n

        You will be trading all kinds of goods to all kinds of wacky individuals across the
        cosmos.\n
        By taking advantage of supply and demand differences between solar systems
        you have the opportunity to amass a fortune over time and become an interplanetary multibillionaire. \n
        Amass a fortune and retire to the moon!
    </string>
    <string name="newGameStart">Start</string>

    <!--main/buyDetailActivity-->
    <string name="welcome_to_the_market_place">Welcome to the Market Place!</string>
    <string name="buyItems">Buy Items</string>
    <string name="sellItems">Sell Items</string>
    <string name="Travel">Travel</string>



    <!--main/buyDetailActivity-->
    <string name="shopItem">Item:</string>
    <string name="shopPrice">Price:</string>
    <string name="playerCredits">Your Credits:</string>
    <string name="storeSupply">In Store:</string>

    <string name="buy_detail_button">Buy</string>
    <string name="buy_quantity">Quantity</string>
    <string name="buy_activity_desc">How many would you like to buy?</string>
    <string name="price">Start</string>
    <string name="back">Back</string>

    <!--main/sellDetailActivity-->
    <string name="sellPrice">Sell Price:</string>
    <string name="cargoSupply">In Cargo:</string>

    <string name="sell_detail_button">Sell</string>
    <string name="sell_activity_desc">How many would you like to Sell?</string>
    <string name="choose_an_item">Choose an item:</string>

    <string name="activityBuyBack">Back</string>


    <!--travelActivity-->
    <string name="choose_a_solarsystem">Choose a Solar System:</string>


    <!--welcome to planet-->
    <string name="travel">Travel</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="busted_by_the_police">Busted by the Police!</string>
    <string name="as_a_bribe_to_stay_of_your_back_you_pay_a_fine_of_50_of_your_credits_and_give_up_your_firearms_and_narcotics">As a bribe to stay of your back, you pay a fine of 50% of your credits and give up your Firearms and Narcotics.</string>
    <string name="accept_deal">Accept Deal</string>


</resources>
