<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pastel"
    tools:ignore="Overdraw">


    <Button
        android:id="@+id/settings_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="onNewGamePressed"
        android:text="@string/newButton" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="onLoadGamePressed"
        android:text="@string/loadButton" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/load_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="onContinuePressed"
        android:text="@string/continueButton" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo_white" />
</RelativeLayout>