<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pastel"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/creditsTag"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="236dp"
        android:text="ActualCredits"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="236dp"
        android:text="@string/playerCredits"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sell_activity_desc"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quatityField"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/buy_quantity"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="136dp"
        android:text="ItemType"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemQuant"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="280dp"
        android:text="Item Quant Avail"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTag"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="184dp"
        android:text="ActualPrice"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/shopItem"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:text="@string/sellPrice"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:text="@string/cargoSupply"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:onClick="onSellPressed"
        android:text="@string/sell_detail_button"
        android:background="#CCCCCC"
        android:textSize="20sp"
        android:textColor="#111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quatityField" />
<!--
    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="40dp"
        android:onClick="onBackPressed"
        android:text="@string/back"
        android:background="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quatityField" />
        -->
</android.support.constraint.ConstraintLayout>